added some new items

--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,7 @@ extends layout
 
 block content
   h1 Projects and Works
-  p.lead A portfolio of recent projects 
+  p.lead Here are some of my more recent coding works
   hr
   .row
     .col-sm-6
@@ -29,6 +29,8 @@ block content
         p
          p
           a.btn.btn-default.filter(role='button') Web_Apps
+          a.btn.btn-default.filter(role='button') Websites
+          a.btn.btn-default.filter(role='button') Web_Design
           a.btn.btn-default.filter(role='button') Active_Projects
           a.btn.btn-default.filter(role='button') Passion_Projects
           a.btn.btn-default.filter(role='button') Human_Potential
@@ -70,8 +72,6 @@ block content
       p Tags: Ruby on Rails, Portfolio, Passion Projects
       p Date: Ongoing
       p
-
-        a.btn.btn-default(href='http://synthesisrecruiting.com/CRM.html', role='button') See This Project Live »
       
 
       p
@@ -88,7 +88,7 @@ block content
       p
         a.btn.btn-default(href='http://synthesisrecruiting.com/core_template.html', role='button') See this mockup »
 
-    .col-sm-6.items.Html.Bootstrap.Web_Apps.Passion_Projects.Human_Potential
+    .col-sm-6.items.Html.Bootstrap.Web_Apps.Passion_Projects.Human_Potential.Web_Apps
       h2 Coaching Guide 
       p Created a quick guide to evidence based coaching practice for our team to support 
       p Date: May 2016
@@ -96,7 +96,7 @@ block content
         a.btn.btn-default(href='http://synthesisrecruiting.com/core_template.html', role='button') See this mockup »
 
 
-    .col-sm-6.items.Html.Bootstrap.Javascript.NVC.Communication_Tools.Passion_Projects.Web_Apps.Human_Potential
+    .col-sm-6.items.Html.Bootstrap.Javascript.NVC.Communication_Tools.Passion_Projects.Web_Apps.Human_Potential.Web_Apps
         h2 Nonviolent Communication Helper 
         p What if when you are upset or having a difficult moment in relating you could use an app to help get clear about what you are feeling, what you are needing, and to communicate effectively?  Built an app to help with that.
         p Date: April 2016
@@ -104,13 +104,40 @@ block content
           a.btn.btn-default(href='Synthesisrecruiting.com/C_HACK/Communication.html', role='button') See this app live »
 
 
-    .col-sm-6.items.Html.Bootstrap.Javascript.NVC.Communication_Tools.Passion_Projects.Human_Potential
+    .col-sm-6.items.Html.Bootstrap.Javascript.NVC.Communication_Tools.Passion_Projects.Human_Potential.Web_Apps
           h2 Self Coaching Web App 
           p What if you had an app purely dedicated to supporting you in being in deep coherence with your sense of purpose, direction and aspirations in life?  I wanted one, so I built it.  Making this a drag and drop tool for users to create their own easily is a project in consideration. 
           p Date: April 2016
           p
             a.btn.btn-default(href='Synthesisrecruiting.com/C_HACK/Dedication.html', role='button') See this app live »
 
+
+    .col-sm-6.items.Html.Bootstrap.Javascript.Passion_Projects.Human_Potential.Web_Apps
+          h2 NinjaCoach.me | Automated Coaching / Facilitation 
+          p I built this app to automate many, many coaching and human potential actualization oriented practices and processes.  I just gave it a facelift. 
+          p Date: Nov 2016
+          p
+            a.btn.btn-default(href='NinjaCoach.me', role='button') See this app live »
+
+    .col-sm-6.items.Html.Bootstrap.Javascript.Web_Apps
+          h2 WorkLoad Automation 
+          p A simple automation of daily tasks associated with operations at SynthesisRecruiting.com
+          p Date: June 2016
+          p
+            a.btn.btn-default(href='http://synthesisrecruiting.com/C_HACK/craighack.html', role='button') See this app live »
+
+    .col-sm-6.items.Html.Bootstrap.Javascript.Websites.Web_Design
+          h2 Main Portfolio Site
+          p Built And Designed my Main Portfolio Site
+          p Date: June 2016
+          p
+            a.btn.btn-default(href='http://synthesisrecruiting.com/Package-HTML/HTML/Synthesis_2.html', role='button') See my Main Portfolio live »
+
+    .col-sm-6.items.eCommerce.Websites
+          h2 AppleServiceCenter.com
+          p Built an eCommerce site built on Squarespace.  
+          p Date: July 2016
+          p
 
 
 
