added more items

--- a/views/home.pug
+++ b/views/home.pug
@@ -8,11 +8,10 @@ block content
   hr
   .row
     .col-sm-6
-      h2 Filter By Language
+      h2 Code Filters
 
         p
          p
-          a.btn.btn-default.filter(role='button') Chrome_Extensions
           a.btn.btn-default.filter(role='button') Rails
           a.btn.btn-default.filter(role='button') SCSS
           a.btn.btn-default.filter(role='button') NodeJS
@@ -28,11 +27,12 @@ block content
 
         p
          p
+          a.btn.btn-default.filter(role='button') Active_Projects
+          a.btn.btn-default.filter(role='button') Passion_Projects
           a.btn.btn-default.filter(role='button') Web_Apps
           a.btn.btn-default.filter(role='button') Websites
           a.btn.btn-default.filter(role='button') Web_Design
-          a.btn.btn-default.filter(role='button') Active_Projects
-          a.btn.btn-default.filter(role='button') Passion_Projects
+          a.btn.btn-default.filter(role='button') Chrome_Extensions
           a.btn.btn-default.filter(role='button') Human_Potential
           a.btn.btn-default.filter(role='button') NVC
           a.btn.btn-default.filter(role='button') Communication_Tools
@@ -40,6 +40,17 @@ block content
   hr
 
   .row
+
+
+    .col-sm-6.items.Rails.Web_Apps.SCSS.Active_Projects.Passion_Projects
+        h2 Connect - On Demand Emotional Support App
+        p What if you could click a button and get support on demand affordably in the moments that it matters the most?
+        p Status: In development, functional prototype generated
+        p Tags: Ruby on Rails, Portfolio, Passion Projects
+        p Date: Ongoing
+        p
+        
+
     .col-sm-6.NodeJS.items.Active_Projects
       h2 This Portfolio Project
       p This Simple Portfolio Project is built on Node.js  
@@ -65,14 +76,6 @@ block content
       p Date: Ongoing
 
       p
-    .col-sm-6.items.Rails.Web_Apps.SCSS.Active_Projects.Passion_Projects
-      h2 Connect - On Demand Emotional Support App
-      p What if you could click a button and get support on demand affordably in the moments that it matters the most?
-      p Status: In development, functional prototype generated
-      p Tags: Ruby on Rails, Portfolio, Passion Projects
-      p Date: Ongoing
-      p
-      
 
       p
     .col-sm-6.items.Rails.Web_Apps.SCSS
