added communication asset link

--- a/views/home.pug
+++ b/views/home.pug
@@ -104,7 +104,7 @@ block content
         p What if when you are upset or having a difficult moment in relating you could use an app to help get clear about what you are feeling, what you are needing, and to communicate effectively?  Built an app to help with that.
         p Date: April 2016
         p
-          a.btn.btn-default(href='Synthesisrecruiting.com/C_HACK/Communication.html', role='button') See this app live »
+          a.btn.btn-default(href='http://synthesisrecruiting.com/C_HACK/Communication.html', role='button') See this app live »
 
 
     .col-sm-6.items.Html.Bootstrap.Javascript.NVC.Communication_Tools.Passion_Projects.Human_Potential.Web_Apps
