updated several links

--- a/views/home.pug
+++ b/views/home.pug
@@ -112,7 +112,7 @@ block content
           p What if you had an app purely dedicated to supporting you in being in deep coherence with your sense of purpose, direction and aspirations in life?  I wanted one, so I built it.  Making this a drag and drop tool for users to create their own easily is a project in consideration. 
           p Date: April 2016
           p
-            a.btn.btn-default(href='Synthesisrecruiting.com/C_HACK/Dedication.html', role='button') See this app live »
+            a.btn.btn-default(href='http://Synthesisrecruiting.com/C_HACK/Dedication.html', role='button') See this app live »
 
 
     .col-sm-6.items.Html.Bootstrap.Javascript.Passion_Projects.Human_Potential.Web_Apps
@@ -120,7 +120,7 @@ block content
           p I built this app to automate many, many coaching and human potential actualization oriented practices and processes.  I just gave it a facelift. 
           p Date: Nov 2016
           p
-            a.btn.btn-default(href='NinjaCoach.me', role='button') See this app live »
+            a.btn.btn-default(href='http://NinjaCoach.me', role='button') See this app live »
 
     .col-sm-6.items.Html.Bootstrap.Javascript.Web_Apps
           h2 WorkLoad Automation 
