added a CRM button to link to document

--- a/views/home.pug
+++ b/views/home.pug
@@ -71,9 +71,13 @@ block content
       p
     .col-sm-6.items.Html.Bootstrap.Javascript.Html.Zapier.Trello.Active_Projects
       h2 Synthesis Recruiting CRM
-      p I needed to automate a set of tasks for a recruiting company so I built a small CRM that automates most of the tasks associated with day to day communications with clients.
+      p I needed to automate a set of tasks for a recruiting company so I built a small CRM that automates most of the tasks associated with day to day communications with clients. Integrated with a database, trello, zapier, firebase.
       p Status: In development, Live and Functional
       p Date: Ongoing
+        a.btn.btn-default(href='http://synthesisrecruiting.com/CRM.html', role='button') See my custom CRM »
+
+
+
 
       p
 
